<resources>
    <string name="app_name">Homescreen</string>
    <string name="woman">Image</string>
    <string name="man">Image</string>
    <string name="textView2">Voor al uw zorgen.</string>
    <string name="logo">Image</string>
    <string name="button1">Volgende Pagina</string>
    <string name="button2">InstructiePagina</string>
    <string name="ballonnentext">Ballonnen blazen</string>
    <string name="x10">Probeer 10 keer een ballon te blazen!</string>
    <string name="video"></string>
    <string name="links"></string>
    <string name="instructieknop">Instructiescherm</string>
    <string name="ballonnenblazeninstructie">Knijp het tuitje van de ballon met je wijsvinger en duim vast, Gebruik je lippen om een afdichting te vormen rond de opening van de ballon. Blaas in de ballon. Dit is dezelfde actie zoals wanneer je gewoon met opgebolde wangen blaast, maar nu in de ballon, en je wangen moeten ontspannen zijn</string>
    <string name="ballonnenx10">Ballonnen blazen x10</string>
    <string name="instructiescherm1titel">Ballonnen blazen</string>
    <string name="kaarsbutton"></string>
    <string name="kaarstekst">Probeer een kaars aan te steken!</string>
    <string name="kaarsinstructie">Pak een lucifer en houd dit tegen het lontje van de kaars aan en de kaars zal branden.</string>
    <string name="images"></string>
    <string name="ikziewatjijnietziet">Speel de spel, ik zie ik zie wat jij niet ziet!</string>
    <string name="ikziewatjijnietzietinstructies">Ik zie, ik zie wat jij niet ziet is een spel waarbij een voorwerp moet worden geraden, die een van de spelers in gedachten heeft. Het enige kenmerk dat hij geeft is de kleur. ⁕Ik zie, ik zie wat jij niet ziet en de kleur is... rood. ...</string>
    <string name="steenpapierschaar">Probeer de spel, steen papier schaar!</string>
    <string name="pittenzak">Benodi</string>
    <string name="benodigheid">Benodigheden</string>
   <string name="benodighedeninstructies">Pittenzakjes, een wasmand of hoepel op de grond, 1 of meerdere stoelen, voor opdracht 2  een lange gang met gladde vloer en weinig obstakels. </string>
    <string name="Opdracht">Opdracht</string>
   <string name="pittenzakjesinstructie2">2. Gooi  de pittenzakjes zo ver mogelijk door de gang</string>
    <string name="pittenzakjesinstructie1">1. Gooi de pittenzakjes in de wasmand of hoepel.</string>
   <string name="Pittenzakjes">Pittenzakjes</string>
    <string name="steenpapierschaarinstructies">een vuist (steen) wint van twee gespreide vingers (de steen maakt de schaar bot) een vlakke hand (papier) wint van een vuist (het papier bedekt de steen) twee gespreide vingers (schaar) winnen van een vlakke hand (de schaar verknipt het papier)</string>
</resources>

