<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".steenpapierschaar">

    <Button
        android:id="@+id/button5"
        android:layout_width="93dp"
        android:layout_height="77dp"
        android:layout_marginStart="302dp"
        android:layout_marginLeft="302dp"
        android:layout_marginTop="638dp"
        android:contentDescription="@string/kaarsbutton"
        android:text="@string/instructieknop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="375dp"
        android:layout_height="230dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/images"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rock" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="294dp"
        android:layout_height="199dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginBottom="219dp"
        android:text="@string/steenpapierschaar"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>